--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.8.0"
 activityCompose = "1.9.0"
 composeBom = "2023.08.00"
+ktorVersion = "2.3.11"
 playServicesMlkitTextRecognitionCommon = "19.0.0"
 cameraCore = "1.3.4"
 cameraLifecycle = "1.3.4"
@@ -36,6 +37,8 @@ androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycl
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 play-services-mlkit-text-recognition-korean = { group = "com.google.android.gms", name = "play-services-mlkit-text-recognition-korean", version.ref = "playServicesMlkitTextRecognitionKorean" }
 translate = { group = "com.google.mlkit", name = "translate", version.ref = "translate" }
+
+ktor-client = { group = "io.ktor", name = "ktor-client-android", version.ref = "ktorVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
