--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,9 @@ cameraLifecycle = "1.3.4"
 cameraView = "1.3.4"
 playServicesMlkitTextRecognitionKorean = "16.0.0"
 translate = "17.0.2"
+firebaseAuthKtx = "23.0.0"
+navigationRuntimeKtx = "2.7.7"
+navigationCompose = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +42,9 @@ play-services-mlkit-text-recognition-korean = { group = "com.google.android.gms"
 translate = { group = "com.google.mlkit", name = "translate", version.ref = "translate" }
 
 ktor-client = { group = "io.ktor", name = "ktor-client-android", version.ref = "ktorVersion"}
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
+androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
