--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".FirebaseLogin"
+            android:name=".firebase.FirebaseLogin"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MLKIT_translator">
